# atdata-app

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.chainlink/: issues.db
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  data-model.md
src/atdata_app/: __init__.py  auth.py  changestream.py  config.py  database.py  identity.py  main.py  mcp_server.py  models.py
src/atdata_app/frontend/: __init__.py  routes.py
src/atdata_app/frontend/static/: style.css
src/atdata_app/frontend/templates/: about.html  base.html  dataset.html  home.html  profile.html  schema.html  schemas.html
src/atdata_app/ingestion/: backfill.py  jetstream.py  processor.py
src/atdata_app/sql/: schema.sql
src/atdata_app/xrpc/: procedures.py  queries.py  router.py  subscriptions.py
tests/: conftest.py  test_analytics.py  test_changestream.py  test_config.py  test_frontend.py  test_identity.py  test_index.py  test_ingestion.py  test_integration.py  test_mcp.py  test_models.py
