[project]
name = "atdata-app"
version = "0.2.2b1"
description = "ATProto AppView for science.alt.dataset"
readme = "README.md"
authors = [
    { name = "Maxine Levesque", email = "hello@maxine.science" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "atproto>=0.0.65",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "mcp>=1.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "jinja2>=3.1",
]

[project.scripts]
atdata-mcp = "atdata_app.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atdata_app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0",
    "ruff>=0.14",
]
